# plexydesk

artwork/themepacks/default/: CMakeLists.txt  main.cfg
artwork/themepacks/default/folderview/: folderview.qml
artwork/themepacks/default/folderview/resources/: CMakeLists.txt  Scripts.js  plugin.cpp  plugin.h  qdeclarativefolderlistmodel.cpp  qdeclarativefolderlistmodel.h  qmldir
artwork/themepacks/default/photoviewer/: photoviewer.qml
base/qt4/: desktopwidget.cpp  desktopwidget.h
runner/: CMakeLists.txt  desktopview.cpp  main.cpp  themepackloader.cpp
